# multillm

./: Cargo.toml  LICENSE.txt
run/: config.toml
src/: api.rs  auth.rs  llmconfig.rs  main.rs
src/openai/: chatcompletions.rs  error.rs
