[package]
name = "multillm"
version = "0.1.0"
edition = "2021"

[dependencies]
tower = { version = "0.4.13", features = ["full"] }
tokio = { version = "1.38.1", features = ["full"] }
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tower-http = { version = "0.5.2", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.15"